# CppBenchmarks

./: .clang-format  .clang-tidy  .gitignore  BCLFileReference.cpp  BCLFileReference.hpp  Benchmark_analysis_Complexity.ipynb  CMakeLists.txt  IddEnums.hpp  IddEnums_constexpr.hpp  IddEnums_constexpr_test.cpp  README.md  TestClass.cpp  TestClass.hpp  bench_Checksum.cpp  bench_EPWStrings.cpp  bench_EnumMap.cpp  bench_EnumMapOfMap.cpp  bench_IdfObject_print.cpp  bench_Lambda_vs_func.cpp  bench_OpenMP.cpp  bench_OpenMP_sum_arrays.cpp  bench_PassStringVal_vs_Ref.cpp  bench_Regex.cpp  bench_ThreadPool.cpp  bench_Vector3d_eplus.cpp  bench_array_2_doubles.cpp  bench_basics.cpp  bench_byref_pod.cpp  bench_clipline.cpp  bench_constexpr_map.cpp  bench_constexpr_map_with_fieldName_cache.cpp  bench_embedded.cpp  bench_emplace.cpp  bench_emplace2.cpp  bench_emplace3.cpp  bench_enum.cpp  bench_eplus_empty_v_int_vector.cpp  bench_filesystem.cpp  bench_iddFileParsing.cpp  bench_isRegexLike.cpp  (+30 more)
.github/ISSUE_TEMPLATE/: 01-bug-report.md  bug-report.md
test/: Other_GTest.cpp  TestClass_GTest.cpp  TestFixture.cpp  TestFixture.hpp
